# martin-the-martian

./: .gitignore  CMakeLists.txt  CPP.cmake  Info.cmake  Messages.cmake  README.md  Resources.cmake  SDL.cmake  Sources.cmake  main.cpp  runLinux.txt
Resources/: monkey.dae  orangebolt.pxm  purplebbolt.pxm
cmake/: CPP.cmake  GLM.cmake  MacOS.cmake  Resources.cmake  SDL.cmake  Sources.cmake
docs/: coordinates.txt  sprites.txt
docs/org.libsdl.sdl20.docset/Contents/: Info.plist
src/: Bolt.h  ColliderComponent.h  ControllerComponent.h  EntityFactory.h  Ship.h  ShipFactory.h  ShipSpriteFactory.h  Sprite.cpp  Sprite.h  Tech.cpp  Tech.h  Tech_SDLBridge.h  Texture2D_SDLBridge.h  VisualComponent.h  component.h  componentfactory.h  componentmanager.h  entity.h  entityfactory.cpp  entityfactory.h  entitymanager.h  eventmanager.h  game.cpp  gameinit.cpp  keyboard.cpp  main.cpp  sdlinit.cpp  sdlwrapper.cpp  sdlwrapper.h  timer.cpp  timer.h  timermanager.cpp  timermanager.h
src/DeleteThis/: Texture2D_SDLBridge.h
src/ECS/: ECSUtil.h
src/ECS/Component/: anchorpointcomponent.cpp  component.h  componentfactory.cpp  componentfactory.h  componentmanager.cpp  componentmanager.h  entityinformationcomponent.cpp  entityinformationcomponent.h  inputcomponent.h  lifespancomponent.cpp  texture.h  texturecomponent.cpp  texturecomponent.h
src/ECS/Entity/: entity.h  entityfactory.h  entitymanager.cpp  (+1 more)
src/Event/: event.h  eventgamepad.h  eventjoystick.h  eventkeyboard.h  eventkeyboard_sdlbridge.cpp  eventkeyboard_sdlbridge.h  eventmanager.h  events.cpp
src/SignalSlot/: signalslot.h
(+750 files in other folders)
